--- a/docs/guides/execute-on-hardware.mdx
+++ b/docs/guides/execute-on-hardware.mdx
@@ -1,11 +1,11 @@
 ---
 title: Execute on target hardware
-description: Run circuits on hardware and return output from a quantum computer. 
+description: Run circuits on hardware and return output from a quantum computer.
 ---
 
 # Execute on target hardware
 
-![../\_images/execute.svg](/images/qiskit-patterns/execute.svg)
+![All Qiskit pattern steps are shown (Map problem, Optimize for hardware, Execute on hardware, Post-process results), with Execute on hardware emphasized. Executing on hardware uses only the Qiskit Runtime service.](/images/qiskit-patterns/execute.svg)
 
 The "execute on hardware" step of a Qiskit pattern involves running your circuits on hardware
 and produces the outputs of the quantum computation. The ISA circuits produced in
