--- a/docs/guides/intro-to-patterns.mdx
+++ b/docs/guides/intro-to-patterns.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction to Qiskit patterns
-description: Qiskit patterns are the broad steps employed when running a domain-specific problem on quantum hardware. 
+description: Qiskit patterns are the broad steps employed when running a domain-specific problem on quantum hardware.
 ---
 
 # Introduction to Qiskit patterns
@@ -14,7 +14,7 @@ The four steps of a Qiskit pattern are as follows:
 - [**Execute** on target hardware](./execute-on-hardware)
 - [**Post-process** results](./post-process-results)
 
-![../\_images/patterns.svg](/images/qiskit-patterns/patterns.svg)
+![All Qiskit pattern steps are shown (Map problem, Optimize for hardware, Execute on hardware, Post-process results). All steps except Execute on hardware use the Qiskit SDK. Optimizing for hardware additionally uses the Qiskit Transpiler Service.  Executing on hardware uses only the Qiskit Runtime Service.](/images/qiskit-patterns/patterns.svg)
 
 Each step is detailed in the sections below.
 
