--- a/docs/guides/transpile.mdx
+++ b/docs/guides/transpile.mdx
@@ -11,12 +11,11 @@ Transpilation is the process of rewriting a given input circuit to match the top
 
 The process of transpilation takes a circuit that contains your instructions:
 
-<img src="/images/guides/pre-transpiled.png" alt="A two-qubit quantum circuit containing a Hadamard and two CNOT gates." />
+![A two-qubit quantum circuit containing a Hadamard and two CNOT gates.](/images/guides/pre-transpiled.png "Quantum circuit")
 
 Transpilation then transforms it such that only instructions available on a chosen backend are used, and optimizes those instructions to minimize the effects of noise:
 
-<img src="/images/guides/transpiled.png" alt="The same two-qubit quantum circuit after transpilation.  It contains RZ, X, SX, and ECR gates." />
-
+![The same two-qubit quantum circuit after transpilation.  It contains RZ, X, SX, and ECR gates.](/images/guides/transpiled.png "Quantum circuit after transpilation")
 ----
 
 A central component of the Qiskit SDK, the transpiler is designed for modularity and extensibility. Its main use is to write new circuit transformations (known as transpiler **passes**), and combine them with other existing passes, greatly reducing the depth and complexity of quantum circuits.  Which passes are chained together and in which order has a major effect on the final outcome. This pipeline is determined by the [`PassManager`](/api/qiskit/qiskit.transpiler.PassManager) and [`StagedPassManager`](/api/qiskit/qiskit.transpiler.StagedPassManager) objects.  The `StagedPassManager` orchestrates the execution of one or more `PassManagers` and determines the order in which they are executed, while the `PassManager` object is merely a collection of one or more passes.  Think of the `StagedPassManager` as the conductor in an orchestra, the `PassManagers` as the different instrument sections, and the `Pass` objects as the individual musicians.  In this way, you can compose hardware-efficient quantum circuits that let you execute utility-scale work while keeping noise manageable.
