--- a/docs/guides/execute-on-hardware.mdx
+++ b/docs/guides/execute-on-hardware.mdx
@@ -5,7 +5,7 @@ description: Run circuits on hardware and return output from a quantum computer.
 
 # Execute on target hardware
 
-![All Qiskit pattern steps are shown (Map problem, Optimize for hardware, Execute on hardware, Post-process results), with Execute on hardware emphasized. Executing on hardware uses only the Qiskit Runtime service.](/images/qiskit-patterns/execute.svg)
+![All Qiskit pattern steps are shown (Map problem, Optimize for hardware, Execute on hardware, and Post-process results), with Execute on hardware emphasized. Executing on hardware uses only the Qiskit Runtime service.](/images/qiskit-patterns/execute.svg)
 
 The "execute on hardware" step of a Qiskit pattern involves running your circuits on hardware
 and produces the outputs of the quantum computation. The ISA circuits produced in
