--- a/docs/guides/map-problem-to-circuits.mdx
+++ b/docs/guides/map-problem-to-circuits.mdx
@@ -5,7 +5,7 @@ description: Take a classical problem and map it to run on a quantum computer.
 
 # Map problem to quantum circuits and operators
 
-![All Qiskit pattern steps are shown (Map problem, Optimize for hardware, Execute on hardware, Post-process results). The Map problem step is emphasized.  This step uses the Qiskit SDK.](/images/qiskit-patterns/map-problem.svg)
+![All Qiskit pattern steps are shown (Map problem, Optimize for hardware, Execute on hardware, and Post-process results). The Map problem step is emphasized.  This step uses the Qiskit SDK.](/images/qiskit-patterns/map-problem.svg)
 
 The "map problem to quantum circuits and operators" step of a Qiskit pattern describes how a user starts with a classical
 problem and figures out how to map it to a quantum computer.
