--- a/docs/guides/post-process-results.mdx
+++ b/docs/guides/post-process-results.mdx
@@ -5,7 +5,7 @@ description: Post-process the results obtained by running on a quantum computer.
 
 # Post-process results
 
-![All Qiskit pattern steps are shown (Map problem, Optimize for hardware, Execute on hardware, and Post-process results). The Post-process results step is emphasized.  This step uses the Qiskit SDK.](/images/qiskit-patterns/post-process-results.svg)
+![All Qiskit pattern steps are shown (Map problem, Optimize for hardware, Execute on hardware, and Post-process results). The 'Post-process results' step is emphasized.  This step uses the Qiskit SDK.](/images/qiskit-patterns/post-process-results.svg)
 
 This final "post-process results" step of a Qiskit pattern involves stitching the outputs from
 the prior step back together to obtain the desired result. This can involve a range of classical
