add to workflow

--- a/docs/guides/run-primitives-rest-api.mdx
+++ b/docs/guides/run-primitives-rest-api.mdx
@@ -1,9 +1,9 @@
 ---
-title: Primitives using REST API
+title: Run primitives with REST API
 description: How to use the Sampler and Estimator primitives with Qiskit Runtime REST API.
 ---
 
-# Primitives using REST API
+# Run primitives with REST API
 
 The steps in this topic describe how to run primitives workloads with REST API, explore the options you can use to configure them, and invoke them in any program of your choice.
 
