update link paths

--- a/docs/guides/run-primitives-rest-api.mdx
+++ b/docs/guides/run-primitives-rest-api.mdx
@@ -18,7 +18,7 @@ The steps in this topic describe how to run primitives workloads with REST API, 
 
 Because Qiskit Runtime `Estimator` is a managed service, you first need to initialize your account. You can then select the device you want to use to calculate the expectation value. You can then select the IBM Quantum Compute resource of your choice to run your calculations on. 
 
-Details on how to initialize your account, view available backends and invalidate tokens can be found in this [topic](/start/setup-channel#set-up-to-use-ibm-quantum-platform-with-rest-api).
+Details on how to initialize your account, view available backends and invalidate tokens can be found in this [topic](./setup-channel#set-up-to-use-ibm-quantum-platform-with-rest-api).
 
 ### 2. Create a QASM circuit
 
@@ -40,7 +40,7 @@ c[1] = measure q[1];
 '''  
 ```
 
-The code snippets given below assume that the `qasm_string` has been transpiled to a new string `resulting_qasm`. Detailed instructions on how to use the Cloud Transpiler API can be found in this [topic](/transpile/rest-api-transpilation).
+The code snippets given below assume that the `qasm_string` has been transpiled to a new string `resulting_qasm`. Detailed instructions on how to use the Cloud Transpiler API can be found in this [topic](./transpile-rest-api.mdx).
 
 ### 3. Run the Quantum Circuit using the EstimatorV2 API
 
@@ -281,7 +281,7 @@ else:
 
 Because Qiskit Runtime `Sampler` is a managed service, you first need to initialize your account. You can then select the device you want to use to calculate the expectation value. You can then select the IBM Quantum Compute resource of your choice to run your calculations on. 
 
-Details on how to initialize your account, view available backends and invalidate tokens can be found in this [topic](/start/setup-channel#set-up-to-use-ibm-quantum-platform-with-rest-api).
+Details on how to initialize your account, view available backends and invalidate tokens can be found in this [topic](./setup-channel#set-up-to-use-ibm-quantum-platform-with-rest-api).
 
 
 ### 2. Create a QASM circuit
@@ -305,7 +305,7 @@ c[1] = measure q[1];
 ```
 
 
-The code snippets given below assume that the `qasm_string` has been transpiled to a new string `resulting_qasm`. Detailed instructions on how to use the Cloud Transpiler API can be found in this [topic](/transpile/rest-api-transpilation).
+The code snippets given below assume that the `qasm_string` has been transpiled to a new string `resulting_qasm`. Detailed instructions on how to use the Cloud Transpiler API can be found in this [topic](./transpile-rest-api).
 
 
 ### 3. Run the Quantum Circuit using SamplerV2 API
@@ -481,10 +481,10 @@ else:
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-    - There are several ways to run workloads, depending on your needs: job mode, session mode and batch mode. Learn how to work with session mode and batch mode by following this [topic](rest-api-execution-modes).
-    - Learn how to [initialize your account](/start/setup-channel#set-up-to-use-ibm-quantum-platform-with-rest-api) with REST API.
-    - Learn how to [transpile circuits using REST API](/transpile/rest-api-transpilation).
+    - There are several ways to run workloads, depending on your needs: job mode, session mode and batch mode. Learn how to work with session mode and batch mode by following this [topic](execution-modes-rest-api).
+    - Learn how to [initialize your account](./setup-channel#set-up-to-use-ibm-quantum-platform-with-rest-api) with REST API.
+    - Learn how to [transpile circuits using REST API](./transpile-rest-api.mdx).
     - Read [Migrate to V2 primitives](/api/migration-guides/v2-primitives).
     - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum Learning.
-    - Learn how to transpile locally in the [Transpile](../transpile/) section.
+    - Learn how to transpile locally in the [Transpile](./transpile) section.
 </Admonition>
