--- a/docs/guides/execution-modes-rest-api.mdx
+++ b/docs/guides/execution-modes-rest-api.mdx
@@ -7,10 +7,9 @@ description: How to run a quantum computing job in a Qiskit Runtime session.
 
 There are several ways to run your Qiskit Primitive workloads using REST APIs, depending on your needs. The three modes: job, session and batch are explained below. 
 
-
 ## Job mode with REST API
 
-In job mode, a single primitive request of the estimator or the sampler made without a context manager. See how to run a quatum circuit using [Estimator](rest-api-primitives#estimator-primitive-with-rest-api) and [Sampler](rest-api-primitives#sampler-primitive-with-rest-api) for some examples. 
+In job mode, a single primitive request of the estimator or the sampler made without a context manager. See how to run a quatum circuit using [Estimator](run-primitives-rest-api#estimator-primitive-with-rest-api) and [Sampler](run-primitives-rest-api#sampler-primitive-with-rest-api) for some examples. 
 
 ## Session mode with REST API
 
@@ -258,9 +257,9 @@ Once a session is setup: one or more `Sampler`/ `Estimator` jobs can be submitte
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-    - Review detailed [Sampler and Estimator](rest-api-primitives) primitives examples using REST API.
-    - Learn how to [transpile circuits using REST API](/transpile/rest-api-transpilation).
+    - Review detailed [Sampler and Estimator](run-primitives-rest-api) primitives examples using REST API.
+    - Learn how to [transpile circuits using REST API](./transpile-rest-api.mdx).
     - Read [Migrate to V2 primitives](/api/migration-guides/v2-primitives).
     - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum Learning.
-    - Learn how to transpile locally in the [Transpile](../transpile/) section.
+    - Learn how to transpile locally in the [Transpile](./transpile) section.
 </Admonition>
