accidentally added extensions - delete

--- a/docs/guides/execution-modes-rest-api.mdx
+++ b/docs/guides/execution-modes-rest-api.mdx
@@ -258,7 +258,7 @@ Once a session is setup: one or more `Sampler`/ `Estimator` jobs can be submitte
 
 <Admonition type="tip" title="Recommendations">
     - Review detailed [Sampler and Estimator](run-primitives-rest-api) primitives examples using REST API.
-    - Learn how to [transpile circuits using REST API](./transpile-rest-api.mdx).
+    - Learn how to [transpile circuits using REST API](./transpile-rest-api).
     - Read [Migrate to V2 primitives](/api/migration-guides/v2-primitives).
     - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum Learning.
     - Learn how to transpile locally in the [Transpile](./transpile) section.
