--- a/docs/guides/run-primitives-rest-api.mdx
+++ b/docs/guides/run-primitives-rest-api.mdx
@@ -40,7 +40,7 @@ c[1] = measure q[1];
 '''  
 ```
 
-The code snippets given below assume that the `qasm_string` has been transpiled to a new string `resulting_qasm`. Detailed instructions on how to use the Cloud Transpiler API can be found in this [topic](./transpile-rest-api.mdx).
+The code snippets given below assume that the `qasm_string` has been transpiled to a new string `resulting_qasm`. Detailed instructions on how to use the Cloud Transpiler API can be found in this [topic](./transpile-rest-api).
 
 ### 3. Run the Quantum Circuit using the EstimatorV2 API
 
@@ -483,7 +483,7 @@ else:
 <Admonition type="tip" title="Recommendations">
     - There are several ways to run workloads, depending on your needs: job mode, session mode and batch mode. Learn how to work with session mode and batch mode by following this [topic](execution-modes-rest-api).
     - Learn how to [initialize your account](./setup-channel#set-up-to-use-ibm-quantum-platform-with-rest-api) with REST API.
-    - Learn how to [transpile circuits using REST API](./transpile-rest-api.mdx).
+    - Learn how to [transpile circuits using REST API](./transpile-rest-api).
     - Read [Migrate to V2 primitives](/api/migration-guides/v2-primitives).
     - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum Learning.
     - Learn how to transpile locally in the [Transpile](./transpile) section.
