--- a/docs/guides/transpile-rest-api.mdx
+++ b/docs/guides/transpile-rest-api.mdx
@@ -14,7 +14,7 @@ You have two transpilation options:
 * Use the [Cloud Transpiler API](https://cloud-transpiler.quantum.ibm.com/docs).
 
 <Admonition type="note">
-    [Transpilation is necessary](/announcements/product-updates/2024-02-14-qiskit-runtime-primitives-update) prior to submitting a circuit to IBM Quantum QPUs.
+    [Transpilation is necessary](https://docs.quantum.ibm.com/announcements/product-updates/2024-02-14-qiskit-runtime-primitives-update) prior to submitting a circuit to IBM Quantum QPUs.
 </Admonition>
 
 The steps in this topic describe how to transpile a given QASM circuit and obtain results using the Cloud Transpiler REST API, and include suggestions on how to submit the transpiled quantum circuit to IBM Quantum compute resources. 
