--- a/docs/guides/hello-world.ipynb
+++ b/docs/guides/hello-world.ipynb
@@ -25,15 +25,8 @@
     "\n",
     "To learn about quantum computing in general, visit the [Basics of quantum information course](https://learning.quantum.ibm.com/course/basics-of-quantum-information) in IBM Quantum Learning.\n",
     "\n",
-    "The four steps to writing a quantum program using Qiskit Patterns are:\n",
-    "\n",
-    "1.  Map the problem to a quantum-native format.\n",
-    "\n",
-    "2.  Optimize the circuits and operators.\n",
-    "\n",
-    "3.  Execute using a quantum primitive function.\n",
-    "\n",
-    "4.  Analyze the results."
+    "<Admonition type=\"note\" title=\"Responsible quantum computing\">\n",
+    "</Admonition>"
    ]
   },
   {
@@ -51,6 +44,16 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
+    "The four steps to writing a quantum program using Qiskit patterns are:\n",
+    "\n",
+    "1.  Map the problem to a quantum-native format.\n",
+    "\n",
+    "2.  Optimize the circuits and operators.\n",
+    "\n",
+    "3.  Execute using a quantum primitive function.\n",
+    "\n",
+    "4.  Analyze the results.\n",
+    "\n",
     "### Step 1. Map the problem to a quantum-native format\n",
     "\n",
     "In a quantum program, *quantum circuits* are the native format in which to represent quantum instructions, and *operators* represent the observables to be measured. When creating a circuit, you'll usually create a new [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit-class) object, then add instructions to it in sequence."
