Added admonitions to transpile and execution mode pages

--- a/docs/guides/execution-modes-rest-api.mdx
+++ b/docs/guides/execution-modes-rest-api.mdx
@@ -7,6 +7,10 @@ description: How to run a quantum computing job in a Qiskit Runtime session.
 
 You can run your Qiskit primitive workloads using REST APIs in one of three execution modes, depending on your needs: job, session, and batch. This topic explains these modes.
 
+<Admonition type="note">
+    This documentation utilizes the Python `requests` module to demonstrate the Qiskit Runtime REST API. However, this workflow can be executed using any language or framework that supports working with REST APIs. Refer to the [API reference documentation](/api/runtime/tags/jobs) for details.
+</Admonition>
+
 ## Job mode with REST API
 
 In job mode, a single primitive request of the Estimator or the Sampler is made without a context manager. See how to run a quantum circuit using [Estimator](run-primitives-rest-api#estimator-primitive-with-rest-api) and [Sampler](run-primitives-rest-api#sampler-primitive-with-rest-api) for some examples. 
