--- a/docs/guides/transpile-rest-api.mdx
+++ b/docs/guides/transpile-rest-api.mdx
@@ -5,6 +5,10 @@ description: How to transpile quantum circuits using REST APIs.
 
 # Transpile using REST API
 
+<Admonition type="note">
+    This documentation utilizes the Python `requests` module to demonstrate the Cloud Transpiler API. However, this workflow can be executed using any language or framework that supports working with REST APIs. Refer to the [API reference documentation](/api/runtime/tags/jobs) for details.
+</Admonition>
+
 The process of rewriting a given input circuit to match the topology of a specific quantum device, and optimizing the circuit instructions for execution on noisy quantum systems, is known as [transpilation](./transpile).
 
 You have two transpilation options: 
