--- a/docs/responsible-quantum-computing.mdx
+++ b/docs/responsible-quantum-computing.mdx
@@ -1,6 +1,6 @@
 ---
 title: Responsible quantum computing
-description: TODO
+description: TODO - filler text so that the SEO check doesn't complain!
 ---
 
 # Responsible quantum computing
