--- a/docs/open-source/index.mdx
+++ b/docs/open-source/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Open source
-description: TODO
+description: TODO - filler text so that the SEO check doesn't complain!
 ---
 
 # Open source
