--- a/tutorials/qaoa-utility-scale/qopt_example.ipynb
+++ b/tutorials/qaoa-utility-scale/qopt_example.ipynb
@@ -7,10 +7,10 @@
    "source": [
     "# Solve utility-scale quantum optimization problems\n",
     "\n",
-    "<em>Estimated QPU usage: 8 minutes (tested on IBM Sherbrooke)</em>\n",
+    "*Estimated QPU usage: 8 minutes (tested on IBM Sherbrooke)*\n",
     "\n",
     "\n",
-    "This tutorial demonstrates how to implement the **Quantum Approximate Optimization Algorithm (QAOA)** -- a hybrid (quantum-classical) iterative method -- within the context of Qiskit patterns. You will first solve the **Maximum-Cut** (or **Max-Cut**) problem for a small graph and then learn how to execute it at utility scale. All the hardware executions in the notebook should run within the time limit for the freely-accessible Open Plan.\n",
+    "This tutorial demonstrates how to implement the **Quantum Approximate Optimization Algorithm (QAOA)** – a hybrid (quantum-classical) iterative method – within the context of Qiskit patterns. You will first solve the **Maximum-Cut** (or **Max-Cut**) problem for a small graph and then learn how to execute it at utility scale. All the hardware executions in the notebook should run within the time limit for the freely-accessible Open Plan.\n",
     "\n",
     "\n",
     "The Max-Cut problem is an optimization problem that is hard to solve (more specifically, it is an *NP-hard* problem) with a number of different applications in clustering, network science, and statistical physics. This tutorial considers a graph of nodes connected by vertices, and aims to partition it into separate graphs such that they are both as large as possible. Put another way, the goal of this problem is to partition the nodes of a graph into two sets such that the number of edges traversed by this cut is maximized.\n",
@@ -937,8 +937,8 @@
    "source": [
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "\n",
-    "pm = generate_preset_pass_manager(optimization_level = 3,\n",
-    "                                    backend = backend)\n",
+    "pm = generate_preset_pass_manager(optimization_level=3,\n",
+    "                                    backend=backend)\n",
     "\n",
     "candidate_circuit_100 = pm.run(circuit_100)\n",
     "candidate_circuit_100.draw('mpl', fold=False, scale=0.1, idle_wires=False)"
