--- a/docs/api/migration-guides/v2-primitives.mdx
+++ b/docs/api/migration-guides/v2-primitives.mdx
@@ -4,6 +4,11 @@ description: Migrate from using the original primitives (Estimator and Sampler) 
 
 ---
 
+<Admonition type="warning">
+The first version of primitives, i.e. [SamplerV1](api/qiskit-ibm-runtime/qiskit_ibm_runtime.SamplerV1) and [EstimatorV1](api/qiskit-ibm-runtime/qiskit_ibm_runtime.EstimatorV1), have been deprecated in ``qiskit-ibm-runtime 0.23``.
+Their support is going to be removed not earlier than July 15th, 2024. 
+</Admonition>
+
 <span id="v2-primitives"></span>
 # Migrate to the Qiskit Runtime V2 primitives
 
@@ -29,7 +34,7 @@ See the [EstimatorV2 API reference](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.E
 
 For backward compatibility, you must explicity import the V2 primitives. Specifying `import <primitive>V2 as <primitive>` is not required, but makes it easier to transition code to V2.
 
-<Admonition type="note">
+<Admonition type="warning">
 After the V1 primitives are no longer supported, `import <primitive>` will import the V2 version of the specified primitive.
 </Admonition>
 
