--- a/docs/guides/primitives.mdx
+++ b/docs/guides/primitives.mdx
@@ -75,6 +75,12 @@ The updated interface uses a *primitive unified bloc* (PUB) for input.  Each PUB
 
 #### Estimator V1
 
+<Admonition type="warning">
+The [EstimatorV1](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.EstimatorV1) has been deprecated in `qiskit-ibm-runtime 0.23`.
+Their support will be removed no earlier than July 15, 2024.
+[EstimatorV2](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.EstimatorV2) is highly recommended instead.
+</Admonition>
+
 * Takes three parameters: circuits, observables, and parameter values.
 * Each parameter can be a single value or a list.
 * The length of the parameters must match.
@@ -186,6 +192,12 @@ list2 = [SparsePauliOp("XX"), SparsePauliOp("XY"), SparsePauliOp("IZ")] # shape 
 </Admonition>
 
 #### Sampler V1
+
+<Admonition type="warning">
+The [SamplerV1](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.SamplerV1) has been deprecated in `qiskit-ibm-runtime 0.23`.
+Their support will be removed no earlier than July 15, 2024.
+[SamplerV2](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.SamplerV2) is highly recommended instead.
+</Admonition>
 
 * Takes two parameters: circuits and parameter values.
 * Each parameter can be a single value or a list.
