--- a/docs/guides/execute-on-hardware.mdx
+++ b/docs/guides/execute-on-hardware.mdx
@@ -29,7 +29,7 @@ expectation values of observables corresponding to physical quantities or cost f
 * [Introduction to primitives](./primitives)
 * [Get started with primitives](./get-started-with-primitives)
 * [Primitives examples](./primitives-examples)
-* [Run primitives with REST API](./run-primitives-rest-api)
+* [Primitives with REST API](./run-primitives-rest-api)
 
 ### Configure runtime options
 * [Configure runtime compilation](./configure-error-suppression)
