--- a/docs/guides/run-primitives-rest-api.mdx
+++ b/docs/guides/run-primitives-rest-api.mdx
@@ -1,9 +1,9 @@
 ---
-title: Run primitives with REST API
+title: Primitives with REST API
 description: How to use the Sampler and Estimator primitives with Qiskit Runtime REST API.
 ---
 
-# Run primitives with REST API
+# Primitives with REST API
 
 The steps in this topic describe how to run and configure primitive workloads with REST API, and demonstrate how to invoke them in any program of your choice.
 
