rename file and update links

--- a/docs/guides/execution-modes-rest-api.mdx
+++ b/docs/guides/execution-modes-rest-api.mdx
@@ -9,7 +9,7 @@ You can run your Qiskit primitive workloads using REST APIs in one of three exec
 
 ## Job mode with REST API
 
-In job mode, a single primitive request of the Estimator or the Sampler is made without a context manager. See how to run a quantum circuit using [Estimator](run-primitives-rest-api#estimator-primitive-with-rest-api) and [Sampler](run-primitives-rest-api#sampler-primitive-with-rest-api) for some examples. 
+In job mode, a single primitive request of the Estimator or the Sampler is made without a context manager. See how to run a quantum circuit using [Estimator](primitives-rest-api#estimator-primitive-with-rest-api) and [Sampler](primitives-rest-api#sampler-primitive-with-rest-api) for some examples. 
 
 ## Session mode with REST API
 
@@ -256,7 +256,7 @@ Once a session is set up, one or more `Sampler`or `Estimator` jobs can be submit
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-    - Review detailed [Sampler and Estimator](run-primitives-rest-api) primitives examples using REST API.
+    - Review detailed [Sampler and Estimator](primitives-rest-api) primitives examples using REST API.
     - Learn how to [transpile circuits using REST API](./transpile-rest-api).
     - Read [Migrate to V2 primitives](/api/migration-guides/v2-primitives).
     - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum Learning.
