--- a/docs/guides/setup-channel.mdx
+++ b/docs/guides/setup-channel.mdx
@@ -151,7 +151,7 @@ Alternatively, you can also access quantum processors with REST APIs, enabling y
     ```
 
 
-    You can then [transpile circuits using REST API](./transpile-rest-api) and run them using either the [Sampler or the Estimator primitives](./run-primitives-rest-api).   
+    You can then [transpile circuits using REST API](./transpile-rest-api) and run them using either the [Sampler or the Estimator primitives](./primitives-rest-api).   
 
 5. After your experiments are complete, you can proceed to invalidate your token and then test its invalidation.
 
