V1 was not changed to mode

--- a/docs/guides/configure-error-mitigation.mdx
+++ b/docs/guides/configure-error-mitigation.mdx
@@ -334,7 +334,7 @@ options.resilience_level = 2
 options.optimization_level = 1
 backend = service.least_busy(operational=True, simulator=False)
 
-estimator = Estimator(options=options, mode=backend)
+estimator = Estimator(options=options, backend=backend)
 ```
 
 <Admonition type="info" title="Note">
