--- a/docs/guides/get-started-with-primitives.mdx
+++ b/docs/guides/get-started-with-primitives.mdx
@@ -91,7 +91,7 @@ estimator = Estimator(mode=backend)
 ```python
 from qiskit_ibm_runtime import Estimator
 
-estimator = Estimator(mode=backend)
+estimator = Estimator(backend=backend)
 ```
   </TabItem>
 </Tabs>
@@ -205,7 +205,7 @@ sampler = Sampler(mode=backend)
     ```python
 from qiskit_ibm_runtime import Sampler
 
-sampler = Sampler(mode=backend)
+sampler = Sampler(backend=backend)
 ```
   </TabItem>
 </Tabs>
