--- a/docs/guides/configure-error-suppression.mdx
+++ b/docs/guides/configure-error-suppression.mdx
@@ -117,7 +117,7 @@ pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
 psi = pm.run(psi)
 H = H.apply_layout(psi.layout)
 
-estimator = Estimator(options=options, mode=backend)
+estimator = Estimator(options=options, backend=backend)
 
 job = estimator.run(circuits=[psi], observables=[H], parameter_values=[theta])
 psi1_H1 = job.result()
