--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -74,7 +74,7 @@ estimator.options.default_shots = 4000
 When creating an instance of the `Estimator` or `Sampler` class, you can pass in the `options` you created in the options class. Those options will then be applied when you use `run()` to perform the calculation.  Example:
 
 ```python
-estimator = Estimator(mode=backend, options=options)
+estimator = Estimator(backend=backend, options=options)
 result = estimator.run(circuit, observable).result()
 print(f">>> Metadata: {result.metadata[0]}")
 ```
@@ -131,7 +131,7 @@ sampler.run([circuit1, circuit2], shots=128)
   <TabItem value="PrimV1" label="V1 primitives">
 You can pass any options to `run()`. Because most users will only overwrite a few options at the job level, it is not necessary to specify the options category. The code below, for example, specifies `shots=1024` instead of `execution={"shots": 1024}` (which is also valid).
 ```python
-estimator = Estimator(mode=backend, options=options)
+estimator = Estimator(backend=backend, options=options)
 result = estimator.run(circuit, observable, shots=1024).result()
 print(f">>> Metadata: {result.metadata[0]}")
 ```
@@ -176,7 +176,7 @@ from qiskit_ibm_runtime import Estimator, Options
 options = Options()
 options.execution.shots = 1024
 
-estimator = Estimator(mode=backend, options=options)
+estimator = Estimator(backend=backend, options=options)
 ```
 
 If you need to modify the number of shots set between iterations (primitive calls), you can set the
@@ -185,7 +185,7 @@ shots directly in the `run()` method. This overwrites the initial `shots` settin
 ```python
 from qiskit_ibm_runtime import Estimator
 
-estimator = Estimator(mode=backend)
+estimator = Estimator(backend=backend)
 
 estimator.run(circuits=circuits, observables=observables, shots=50)
 
@@ -243,7 +243,7 @@ options = Options(optimization_level=1)
 options = Options()
 options.optimization_level = 1
 
-estimator = Estimator(mode=backend, options=options)
+estimator = Estimator(backend=backend, options=options)
 ```
 
 Turning off all optional runtime compilation steps requires a "second-level option", as follows:
@@ -254,7 +254,7 @@ from qiskit_ibm_runtime import Estimator, Options
 options = Options()
 options.transpilation.skip_transpilation = True
 
-estimator = Estimator(mode=backend, options=options)
+estimator = Estimator(backend=backend, options=options)
 ```
 
 For more information and a complete list of advanced transpilation options, see the Advanced transpilation options table in the
@@ -298,7 +298,7 @@ options = Options(resilience_level = 2)
 options = Options()
 options.resilience_level = 2
 
-estimator = Estimator(mode=backend, options=options)
+estimator = Estimator(backend=backend, options=options)
 ```
 </TabItem>
 </Tabs>
